--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ form {
 
 #faqs {
   padding-bottom: 2rem;
+  width: 80%;
 }
 
 footer {
@@ -93,5 +94,14 @@ footer {
   .card {
     width: 90%;
     margin: 1rem;
+  }
+
+  #faqs .card {
+    width: 100%;
+    margin: 0;
+  }
+
+  #faqs {
+    width: 95%;
   }
 }
