--- a/css/styles.old.css
+++ b/css/styles.old.css
@@ -1,102 +1,143 @@
 body {
   margin-top: 3rem;
-  position: relative; }
+  position: relative;
+}
 
 h2 {
-  padding-left: 1rem; }
+  padding-left: 1rem;
+}
 
 #contact {
-  margin: 5rem auto; }
+  margin: 5rem auto;
+}
 
 .jumbotron {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 .nav-item > .active {
   background-color: aliceblue;
-  border-radius: 0.25rem; }
+  border-radius: 0.25rem;
+}
 
 .content {
   padding: 5rem 2rem;
-  background-color: #afc5a5; }
+  background-color: #afc5a5;
+}
 
 form {
   padding: 3rem;
   width: 50%;
-  margin: auto; }
+  margin: auto;
+}
 
 .btn-primary {
   background-color: #77a2c2;
-  border-color: #5f8db0; }
+  border-color: #5f8db0;
+}
 
 .btn-primary:hover {
-  background-color: #5f8db0; }
+  background-color: #5f8db0;
+}
 
 .card-deck-custom {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 1.5rem; }
+  padding: 1.5rem;
+}
 
 .product-card {
-  width: 30%; }
+  width: 30%;
+}
 
 #faqs {
   padding-bottom: 2rem;
-  width: 80%; }
+  width: 80%;
+}
 
 #about {
   width: 80%;
   margin: auto;
   padding-top: 4rem;
-  padding-bottom: 4rem; }
+  padding-bottom: 4rem;
+}
 
 footer {
-  background-color: #b39999;
+  background-color: rgb(179, 153, 153);
   text-align: center;
-  padding: 0.75rem 0; }
+  padding: 0.75rem 0;
+}
 
 footer > div {
-  padding: 0.25rem 0; }
+  padding: 0.25rem 0;
+}
 
 footer .fab {
   font-size: 3rem;
   padding: 0.3rem;
-  color: lightblue; }
+  color: lightblue;
+}
 
 footer .fab:hover {
-  color: lightskyblue; }
+  color: lightskyblue;
+}
 
 @media only screen and (max-width: 992px) {
   .left-content,
   .center-content,
   .right-content {
     padding: 5rem;
-    background-color: #afc5a5; }
+    background-color: #afc5a5;
+  }
+
   .center-content {
-    background-color: white; }
+    background-color: white;
+  }
+
   .content {
-    padding: 0; }
+    padding: 0;
+  }
+
   .content > .row {
-    margin: 0; }
+    margin: 0;
+  }
+
   form {
-    width: 80%; } }
+    width: 80%;
+  }
+}
 
 @media only screen and (max-width: 576px) {
   form {
     width: 95%;
-    padding: 3 rem 1.5rem; }
+    padding: 3 rem 1.5rem;
+  }
+
   .card-deck-custom {
-    padding: 1rem; }
+    padding: 1rem;
+  }
+
   .card {
     width: 90%;
-    margin: 1rem; }
+    margin: 1rem;
+  }
+
   #faqs .card {
     width: 100%;
-    margin: 0; }
+    margin: 0;
+  }
+
   #faqs {
-    width: 95%; }
+    width: 95%;
+  }
+
   #about {
     padding-top: 2rem;
-    padding-bottom: 2rem; }
+    padding-bottom: 2rem;
+  }
+
   footer .fab {
-    font-size: 5rem; } }
+    font-size: 5rem;
+  }
+}
