--- a/css/styles.scss
+++ b/css/styles.scss
@@ -111,6 +111,7 @@ footer > div {
 }
 
 footer .fab {
+  transition-duration: 0.4s;
   font-size: 3rem;
   padding: 0.3rem;
   color: #a74b3f;
@@ -118,6 +119,11 @@ footer .fab {
 
 footer .fab:hover {
   color: darken(#a74b3f, 5%);
+}
+
+footer .fab:active {
+  // color: blue;
+  transform: scale(0.97);
 }
 
 @media only screen and (max-width: 992px) {
