Prepare for deploy - move images, add deploy packages, scripts, etc.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
 body {
   margin-top: 3rem;
-  position: relative; }
+  position: relative;
+  font-family: "Raleway", sans-serif; }
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Quicksand", sans-serif; }
 
 #products:before,
 #contact:before,
